--- a/service/templates/service/offer_list.html
+++ b/service/templates/service/offer_list.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 {% for offer in offers %}
-  {% include "offer/base/offer_detail_base.html" %}
+  {% include "service/base/offer_detail_base.html" %}
 {% empty %}
-<p class="article-content" style="color: darkred; font-size:small">There is no this offer on this page right now.</p>
+<p class="article-content" style="color: darkred; font-size:small">There is no offer on this page right now.</p>
 {% endfor %}
 
 
