messageform, offerform and profilelinks updated

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -11,9 +11,12 @@
             <p class="account-heading">{{user.username}}</p>
             <!-- <p class="text-secondary">{{user.email}}</p> -->
             <a class="" href="{% url 'update' %}">Update Profile</a> 
-            <a class="" href="{% url 'offer-list-user' user.username %}"> My Offers</a>
+<!--             <a class="" href="{% url 'offer-list-user' user.username %}"> My Offers</a> -->
             <p class="text-secondary">Current Timecredit: {{user.profile.timecredit}}</p>
-            <p class="text-secondary">following and followers </p>   
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-list-user' user.username %}" type="submit">My Offers</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-list-user' user.username %}" type="submit">My Requests</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-list-user' user.username %}" type="submit">My Events</a>
+ 
         </div>
         
         </div>
