--- a/service/templates/service/message_form.html
+++ b/service/templates/service/message_form.html
@@ -25,11 +25,11 @@
         <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Send Private Message to {{receiver.username}}</legend>
+       <!--      <legend class="border-bottom mb-4">Send Private Message to {{receiver.username}}</legend> -->
             {{ form | crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Offer</button>
+            <button class="btn btn-outline-info" type="submit">Send</button>
         </div>
     </form>
 </div>
