--- a/service/templates/service/base/offer_detail_base.html
+++ b/service/templates/service/base/offer_detail_base.html
@@ -3,7 +3,11 @@
     <img class="rounded-circle article-img" src="{{ offer.author.profile.image.url }}">
     <div class="media-body">
         <div class="article-metadata">
+        {% if offer.author == user %}
+            <a class="mr-2" href="/profile/">{{ offer.author }}</a>
+        {% else %}
             <a class="mr-2" href="{% url 'user-posts' offer.author.username %}">{{ offer.author }}</a>  
+        {% endif %}
             <small class="text-muted">{{ offer.date_posted | date:"F d, Y"}}</small>
         </div>
         <h2 class="article-title">{{ offer.title }}</h2>
@@ -18,13 +22,17 @@
         {% elif user.is_authenticated and user in offer.waiting_participants.all %}
         <p class="article-content" style="color: green">You have already applied for this service and your application is waiting.</p>
         {% elif user.is_authenticated and user in offer.current_participants.all %}
-        <p class="article-content" style="color: green">You have already enrolled for this service. The author will be paid by timecredits after you submit your feedback.</p>
-        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'feedback-create' offer.id %}" type="submit">Submit Feedback</a>
+        <p class="article-content" style="color: green">You have already enrolled for this service. The author will be paid by timecredits after you and the offerer submit the feedback.</p>
+            {% if user.username not in offer.feedback_senders %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'feedback-create' offer.id offer.author.username %}" type="submit">Submit Feedback</a>
+            {% else %}
+            You have already submitted a feedback for this service. 
+            {% endif %}
         {% elif user.is_authenticated and user in offer.finished_participants.all %}
         <p class="article-content" style="color: green">You already used this service and the service is now completed.</p>
         {% elif user.is_authenticated and user.profile.timecredit < offer.timecredit %}
         <p class="article-content" style="color: red">You need at least {{offer.timecredit}} timecredit, but you have {{user.profile.timecredit}} timecredit available.</p>
-        {% elif user.is_authenticated and user.profile.timecredit < offer.timecredit %}
+        {% elif user.is_authenticated and offer.num_participants >= offer.max_participants %}
         <p class="article-content" style="color: red">This offer has already reached its limit and does not accept new applications.</p>
         {% elif user.is_authenticated %}
         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-apply' offer.id %}" type="submit">Apply</a>
@@ -45,7 +53,7 @@
             <hr />
             <h5>Current Participants</h5>
             {% for participant in offer.current_participants.all %}
-                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}</p>
+                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}} {% if participant.username not in offer.feedback_receivers %}<a class="" href="{% url 'feedback-create' offer.id participant.username %}" type="submit">(Submit Feedback)</a> {% else %} (Already submitted feedback) {% endif %}</p>
             {% empty %}
             <p class="article-content" style="color: darkblue; font-size:small">There is no current participant yet.</p>
             {% endfor %}
@@ -62,7 +70,7 @@
         <hr />
         {% for feedback in offer.feedbacks.all %}
         <small> {{feedback.date_posted}}</small> 
-            <p class="article-content">  {{feedback.author}}: {{feedback.rating}}/5
+            <p class="article-content">  {{feedback.sender}} to {{feedback.receiver}}: {{feedback.rating}}/5
                 {{feedback.content}}</p>
             <hr />
             {% empty %}
