--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -77,7 +77,7 @@
             </form>
           </br>
           <div class="col-md-4">
-            <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><a href="{% url 'search-advanced' %}">Advanced Search</a></button>
+            <a class="btn btn-outline-info mt-0 mb-0" href="{% url 'search-advanced' %}" type="submit">Advanced Search</a>
           </div>
           </br>
             <p class='text-muted'>
