--- a/service/templates/service/home.html
+++ b/service/templates/service/home.html
@@ -30,7 +30,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="{{ post.image.url }}" alt="image">
+<!--     <img class="card-img-top" src="{{ post.image.url }}" alt="image"> -->
     <div class="card-body">
       <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5> 
       <p class="card-text"><small class="text-muted">Location: {{ post.location }}</small><small class="text-muted">Date: {{ post.date }}</small></p>
