--- a/service/templates/service/user_posts.html
+++ b/service/templates/service/user_posts.html
@@ -75,9 +75,9 @@
             </div>
             <h3><a class="article-title" href="{% url 'event-detail' event.id %}">{{ event.title }}</a></h3>
             <p class="article-content">{{ event.content }}</p>
-            <div class="text-secondary">
+<!--             <div class="text-secondary">
               <button class="btn btn-secondary btn-sm btn-lg" href="#">Join</button>
-            </div>
+            </div> -->
           </div>
         </article>
       {% endfor %}
