--- a/service/templates/service/event_detail.html
+++ b/service/templates/service/event_detail.html
@@ -3,19 +3,22 @@
 {% block content %}
 
 <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+<!--     <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}"> -->
     <div class="media-body">
-        <div class="article-metadata">
+<!--         <div class="article-metadata">
             <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>  
             <small class="text-muted">{{ object.date_posted | date:"F d, Y"}}</small>
-        </div>
+        </div> -->
         <h2 class="article-title">{{ object.title }}</h2>
-        <p class="article-content">{{ object.location }}, {{ object.date }}</p> 
+        <p class="article-content"> <small class="text-muted">Location: {{ object.location }} &emsp; Date: {{ object.date }}</small></p> 
         <p class="article-content">{{ object.content }}</p>        
         {% if object.author == user %}
         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-update' object.id %}" type="submit">Update Event</a>
         <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'event-delete' object.id %}" type="submit">Delete Event</a>
         {% endif %}
+        <p></p>
+        <a href="{% url 'user-posts' object.author.username %}"><img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}"></a> 
+        <small class="text-muted">Requested by <a href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>  on {{ object.date_posted | date:"F d, Y"}}</small>
     </div>
 </article>
 
