--- a/service/templates/service/search_results.html
+++ b/service/templates/service/search_results.html
@@ -4,7 +4,22 @@
 
 
 {% for offer in offers %}
-  {% include "service/base/offer_detail_base.html" %}
+<!--   {% include "service/base/offer_detail_base.html" %} -->
+<div class="card-deck">
+  <div class="card">
+    <!-- <img class="card-img-top" src="{{ offer.image.url }}" alt="image"> -->
+    <div class="card-body">
+      <h5 class="card-title"><a class="article-title" href="{% url 'offer-detail' offer.id %}">{{ offer.title }}</a></h5> 
+      <p class="card-text"><small class="text-muted">Location: {{ offer.location }}</small><small class="text-muted">Date: {{ offer.date }}</small></p>
+      <!-- <span id="dots">...</span><span id="more"></span>
+      <button onclick="myFunction()" id="myBtn">...</button> -->
+      <p class="card-text">{{ offer.content }}</p>
+      <a href="{% url 'user-posts' offer.author.username %}"><img class="rounded-circle article-img" src="{{ offer.author.profile.image.url }}"></a> 
+      <small class="text-muted">Offered by <a href="{% url 'user-posts' offer.author.username %}">{{ offer.author }}</a>  on {{ offer.date_posted | date:"F d, Y"}}</small>
+    </div>
+  </div>
+</div>
+</br>
 {% empty %}
 <p class="article-content" style="color: darkred; font-size:small">There are no offers for this search query right now.</p>  
 {% endfor %}
@@ -13,7 +28,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap">
+<!--     <img class="card-img-top" src="{{ post.image.url }}" alt="Card image cap"> -->
     <div class="card-body">
       <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5> 
       <p class="card-text"><small class="text-muted">Location: {{ post.location }}</small><small class="text-muted">Date: {{ post.date }}</small></p>
@@ -29,22 +44,21 @@
 {% endfor %}
 
 {% for event in events %}
-  <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ event.author.profile.image.url }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" href="{% url 'user-events' event.author.username %}">{{ event.author }}</a>
-        <small class="text-muted" >{{ event.date_posted | date:"F d, Y"}}</small>
-        
-      </div>
-      <h3><a class="article-title" href="{% url 'event-detail' post.id %}">{{ event.title }}</a></h3>
-      <p class="article-content">{{ event.location }}, {{ event.date }}</p> 
-      <p class="article-content">{{ event.content }}</p>
-      <div class="text-secondary">
-        <button class="btn btn-secondary btn-sm btn-lg" href="#">Join</button>
-      </div>
+<div class="card-deck">
+  <div class="card">
+<!--     <img class="card-img-top" src="{{ post.image.url }}" alt="image"> -->
+    <div class="card-body">
+      <h5 class="card-title"><a class="article-title" href="{% url 'event-detail' event.id %}">{{ event.title }}</a></h5> 
+      <p class="card-text"><small class="text-muted">Location: {{ event.location }}</small><small class="text-muted">Date: {{ event.date }}</small></p>
+      <!-- <span id="dots">...</span><span id="more"></span>
+      <button onclick="myFunction()" id="myBtn">...</button> -->
+      <p class="card-text">{{ event.content }}</p>
+      <a href="{% url 'user-posts' event.author.username %}"><img class="rounded-circle article-img" src="{{ event.author.profile.image.url }}"></a> 
+      <small class="text-muted">Posted by <a href="{% url 'user-posts' event.author.username %}">{{ event.author }}</a>  on {{ event.date_posted | date:"F d, Y"}}</small>
     </div>
-  </article>
+  </div>
+</div>
+</br>
   {% empty %}
   <p class="article-content" style="color: darkred; font-size:small">There are no posts for this event query right now.</p>  
 {% endfor %}
