--- a/service/templates/service/feedback_form.html
+++ b/service/templates/service/feedback_form.html
@@ -6,7 +6,7 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Give a Feedback to the Service</legend>
+            <legend class="border-bottom mb-4">Give a Feedback to the {{receiver}}</legend>
             {{ form | crispy }}
         </fieldset>
         <div class="form-group">
