--- a/service/templates/service/notification_list.html
+++ b/service/templates/service/notification_list.html
@@ -6,18 +6,39 @@
   <article class="media content-section">
       <div class="media-body">
         <small style="color: gray">{{notification.date_posted}}</small>  
-        <br>
         {% if notification.action == 'OFFER_NEW_FEEDBACK' %}
           Your offer titled "{{notification.offer.title}}" received a new feedback.
+          <br>
+          <small>To see the offer, Click <a href="{{notification.offer.get_absolute_url}}">here</a>.</small>
         {% elif notification.action == 'OFFER_NEW_APPLICATION' %}
           Your offer titled "{{notification.offer.title}}" received new application.
+          <br>
+          <small>To see the offer, Click <a href="{{notification.offer.get_absolute_url}}">here</a>.</small>
         {% elif notification.action == 'OFFER_APPLICATION_ACCEPTED' %}
           Your application to the offer titled "{{notification.offer.title}}" was accepted.
+          <br>
+          <small>To see the offer, Click <a href="{{notification.offer.get_absolute_url}}">here</a>.</small>
         {% elif notification.action == 'OFFER_APPLICATION_REJECTED' %}
           Your application to the offer titled "{{notification.offer.title}}" was rejected.
         {% endif %}
         <br>
-        <small>To see the offer, Click <a href="{{notification.offer.get_absolute_url}}">here</a>.</small>
+        {% if notification.action == 'EVENT_NEW_FEEDBACK' %}
+          Your event titled "{{notification.event.title}}" received a new feedback.
+          <br>
+          <small>To see the event, Click <a href="{{notification.event.get_absolute_url}}">here</a>.</small>
+        {% elif notification.action == 'EVENT_NEW_APPLICATION' %}
+          Your event titled "{{notification.event.title}}" received new application.
+          <br>
+          <small>To see the event, Click <a href="{{notification.event.get_absolute_url}}">here</a>.</small>
+        {% elif notification.action == 'EVENT_APPLICATION_ACCEPTED' %}
+          Your application to the event titled "{{notification.event.title}}" was accepted.
+          <br>
+          <small>To see the event, Click <a href="{{notification.event.get_absolute_url}}">here</a>.</small>
+        {% elif notification.action == 'EVENT_APPLICATION_REJECTED' %}
+          Your application to the event titled "{{notification.event.title}}" was rejected.
+          <br>
+          <small>To see the event, Click <a href="{{notification.event.get_absolute_url}}">here</a>.</small>
+        {% endif %}
       </div>
   </article>
 {% empty %}
