--- a/service/templates/service/event_detail.html
+++ b/service/templates/service/event_detail.html
@@ -17,8 +17,33 @@
         <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'event-delete' object.id %}" type="submit">Delete Event</a>
         {% endif %}
         <p></p>
-        <a href="{% url 'user-posts' object.author.username %}"><img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}"></a> 
-        <small class="text-muted">Requested by <a href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>  on {{ object.date_posted | date:"F d, Y"}}</small>
+
+        {% if user == event.author %}
+        <hr />
+            <h3>Participants</h3>
+            <hr />
+            <h5>Waiting Participants</h5>
+            {% for participant in event.waiting_participant.all %}
+                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}: <a style="color:darkgreen" href="{% url 'event-action' event.id 'accept' participant.id %}">Accept</a> / <a style="color: darkred" href="{% url 'event-action' event.id 'reject' participant.id %}">Reject</a>
+                </p>
+            {% empty %}
+            <p class="article-content" style="color: darkblue; font-size:small">There is no waiting participant yet.</p>
+            {% endfor %}
+            <hr />
+            <h5>Current Participants</h5>
+            {% for participant in event.current_participant.all %}
+                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}} </p>
+            {% empty %}
+            <p class="article-content" style="color: darkblue; font-size:small">There is no current participant yet.</p>
+            {% endfor %}
+            <hr />
+        {% endif %}
+        {% if user != event.author %}
+        <a href="{% url 'user-posts' event.author.username %}"><img class="rounded-circle article-img" src="{{ event.author.profile.image.url }}"></a> 
+        <small class="text-muted">Organized by <a href="{% url 'user-posts' event.author.username %}">{{ event.author }}</a>  on {{ event.date_posted | date:"F d, Y"}}</small>
+        <p></p>
+        {% endif %}
+
     </div>
 </article>
 
