--- a/app/service/templates/service/base.html
+++ b/app/service/templates/service/base.html
@@ -88,54 +88,50 @@
                 <a class="list-group-item list-group-item-light" href="{% url 'event-create' %}">Organize Event</a>
             </p>
            <!-- <div class="content-section">-->
-              <h4>Recommended Services</h4>
-              <p class='text-muted'><!--You can join any event or get any service here you'd like.-->
-                <!--<ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Services</li>
-                  <li class="list-group-item list-group-item-light">Events</li>
-                  <li class="list-group-item list-group-item-light">Offers</li>
-                  <li class="list-group-item list-group-item-light">Requests</li>
-                </ul>-->
+              <br>
+              <h5>Recommendations</h5>
+              {% for offer in offers %}
+                {% if offer.author in user.profile.following.all %}
+                  <div class="card-deck">  
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title"><a class="article-title" href="{% url 'offer-detail' offer.id %}">{{ offer.title }}</a></h5> 
+                        <p class="card-text"><small class="text-muted">{{ offer.location }}, {{ offer.date }}</small></p>
+                      </div>
+                    </div>
+                  </div>
+                  </br>
+                {% endif %}
+              {% endfor %}
+
+              {% for post in posts %}
+                {% if post.author in user.profile.following.all %}
                 <div class="card-deck">  
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title"><a class="article-title" href="#">Yoga Class</a></h5> 
-                    <p class="card-text"><small class="text-muted">Online, 23 Nov, 2021</small></p>
-                  </div>
-                </div>
-                </div>
-              </br>
-              <div class="card-deck">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title"><a class="article-title" href="#">Yoga Class</a></h5> 
-                    <p class="card-text"><small class="text-muted">Online, 23 Nov, 2021</small></p>
-                  </div>
-                </div>
-              </p>
-            </div>
-          </br>
-
-              <h4>Recommended Events</h4>
-              <p class='text-muted'><!--You can join any event or get any service here you'd like.-->
-                <div class="card-deck">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title"><a class="article-title" href="#">Yoga Class</a></h5> 
-                      <p class="card-text"><small class="text-muted">Online, 23 Nov, 2021</small></p>
+                      <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5> 
+                      <p class="card-text"><small class="text-muted">{{ post.location }}, {{ post.date }}</small></p>
                     </div>
                   </div>
                 </div>
-                  <br>
-                  <div class="card-deck">
+                </br>
+                {% endif %}
+              {% endfor %}
+
+              {% for event in events %}
+                {% if event.author in user.profile.following.all %}
+                <div class="card-deck">  
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title"><a class="article-title" href="#">Yoga Class</a></h5> 
-                      <p class="card-text"><small class="text-muted">Online, 23 Nov, 2021</small></p>
+                      <h5 class="card-title"><a class="article-title" href="{% url 'event-detail' event.id %}">{{ event.title }}</a></h5> 
+                      <p class="card-text"><small class="text-muted">{{ event.location }}, {{ event.date }}</small></p>
                     </div>
                   </div>
-              </p>
-
+                </div>
+                </br>
+                {% endif %}
+              {% endfor %}
+              <p id="demo"></p>
           </div>
         </div>
       </main>
